<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/yellow"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:textColor="@color/yellow"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/enter_first_name"
        android:inputType="text"
        android:textColorHint="@color/yellow"
        app:drawableStartCompat="@drawable/ic_baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:singleLine="true"
        tools:ignore="UseCompatTextViewDrawableXml" />


    <EditText
        android:id="@+id/lastname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:singleLine="true"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/enter_last_name"
        android:inputType="text"
        android:textColor="@color/yellow"
        android:textColorHint="@color/yellow"
        app:drawableStartCompat="@drawable/ic_baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:singleLine="true"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:gravity="center"
        android:hint="@string/enter_email_id"
        android:inputType="textEmailAddress"
        android:textColor="@color/yellow"
        android:textColorHint="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname"
        android:drawableLeft="@drawable/ic_baseline_email_24" />

    <EditText
        android:id="@+id/MobileNumber"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:singleLine="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:gravity="center"
        android:hint="@string/enter_mobile_no"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/yellow"
        android:maxLength="10"
        android:textColorHint="@color/yellow"
        app:drawableStartCompat="@drawable/ic_baseline_local_phone_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:singleLine="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:textColor="@color/yellow"
        android:inputType="textPassword"
        android:textColorHint="@color/yellow"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MobileNumber"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="0dp"
        android:singleLine="true"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:textColor="@color/yellow"
        android:inputType="textPassword"
        android:textColorHint="@color/yellow"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:visibility="visible" />

    <Button
        android:id="@+id/Register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/button"
        android:text="@string/register2"
        android:textColor="#000000"
        app:backgroundTint="#F4C536"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>